--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "lucide-react": "^0.488.0",
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-vertical-timeline-component": "^3.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
